--- a/diesel_migrations/migrations_macros/Cargo.toml
+++ b/diesel_migrations/migrations_macros/Cargo.toml
@@ -11,6 +11,7 @@ homepage = "http://diesel.rs"
 migrations_internals = "~1.3.0"
 syn = { version = "0.11.4", features = ["aster"] }
 quote = "0.3.12"
+libsqlite3-sys = { version = ">=0.8.0, <0.10.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
 
 [dev-dependencies]
 tempdir = "0.3.4"
